--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Taskmasteragain">
-        <activity android:name=".AddTask"></activity>
+        <activity android:name=".TaskDetail"></activity>
+        <activity android:name=".Setting" />
+        <activity android:name=".AddTask" />
         <activity android:name=".AllTask" />
         <activity android:name=".MainActivity">
             <intent-filter>
