--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Taskmasteragain">
-        <activity android:name=".TaskDetail"></activity>
+        <activity android:name=".ListTask"></activity>
+        <activity android:name=".TaskDetail" />
         <activity android:name=".Setting" />
         <activity android:name=".AddTask" />
         <activity android:name=".AllTask" />
