--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.example.taskmasteragain">
 
     <application
@@ -8,8 +9,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Taskmasteragain">
-        <activity android:name=".ListTask"></activity>
+        android:theme="@style/Theme.Taskmasteragain"
+        tools:ignore="AllowBackup">
+        <activity android:name=".ListTask"/>
         <activity android:name=".TaskDetail" />
         <activity android:name=".Setting" />
         <activity android:name=".AddTask" />
