--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,5 +71,11 @@ dependencies {
     implementation 'com.amplifyframework:core:1.24.0'
 // lab36
     implementation 'com.amplifyframework:aws-auth-cognito:1.24.0'
+//    lab37
+    implementation 'com.amplifyframework:aws-storage-s3:1.24.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.12.0'
+
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
 }
