--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -7,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "com.amaraAlbalkhi.taskmasteragain"
+        applicationId "com.example.taskmasteragain"
         minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
@@ -33,6 +34,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'com.google.firebase:firebase-messaging:20.2.4'
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.gms:play-services-tasks:17.2.1'
     implementation 'androidx.test.espresso:espresso-contrib:3.4.0'
@@ -77,5 +79,17 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
 
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+
+//    lab38
+    implementation platform('com.google.firebase:firebase-bom:28.4.0')
+    implementation 'com.google.firebase:firebase-analytics'
+
+    implementation 'com.amazonaws:aws-android-sdk-pinpoint:2.25.0'
+    implementation ('com.amazonaws:aws-android-sdk-mobile-client:2.26.0@aar') { transitive = true }
+
+    // Overrides an auth dependency to ensure correct behavior
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
+
+
 
 }
