--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ buildscript {
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
         classpath 'com.amplifyframework:amplify-tools-gradle-plugin:1.0.2'
+
+//        lab38
+        classpath 'com.google.gms:google-services:4.3.10'
     }
 }
 
